[package]
name = "scone_cli"
version = "1.0.0"
edition = "2024"
publish = false
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
log = "*"
handlebars = "*"
rand = "0.9.0"
shells = "*"
opg = "*"
#get_if_addrs = "0.5.3"
signpolicy = { git = "ssh://git@github.com/scontain/signpolicy.git", rev="0867fbf657265ac94405860e59e75aca4e441565"}
spawn_server = { git = "ssh://git@github.com/scontain/spawn_server.git", rev="f7175d2037aa774e908cfaa07f218aa9c21820c7"}
